--- a/FOOD/package.json
+++ b/FOOD/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.21.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "immer": "^9.0.5",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
