--- a/FOOD/package.json
+++ b/FOOD/package.json
@@ -45,6 +45,7 @@
     "react-native-image-picker": "^4.7.3",
     "react-native-indicators": "^0.17.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^3.3.1",
